--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* обнуление браузерных стилей*/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -17,12 +18,12 @@ table, caption, tbody, tfoot, thead, tr, th, td {
     background: transparent;
     background-color : white;
 }
-
+/* задаем высоту страницы*/
 html{
     height: 300%;
 }
-
-.container{
+/**/
+.sticky-header{
     position: absolute;
     width: 300px;
     height: 50px;
@@ -33,7 +34,7 @@ html{
     background-color: gray;
 }
 
-.containerfx{
+.sticky-header-fixed{
     position: fixed;
     width: 300px;
     height: 50px;
